tests/dev_and_build/errors/js_import_not_found/client/intermediate.js
// eslint-disable-next-line import/no-unresolved
import "./foo.js"

if (import.meta.hot) {
  import.meta.hot.accept()
}
